# STECode

./: .gitignore  README.md  Snakefile  pyproject.toml
stecode/: __main__.py  arguments.py  assists.py  cmd_runners.py  gen_output.py  mini_stecode.py  stecode.py
stecode/database/: stx_eae_hly_recA.fasta.sa  stx_recA_eae.fasta  stx_recA_eae.fasta.amb
stecode/parsers/: eaesubtype_parse.py  recAstxeae_parse.py  recAstxeaehly_parse.py  samtools_parse.py  stecvir_parse.py
tests/: conftest.py  ext_args_test.py  ext_fasta_test.py  ext_stecode_test.py  ext_sysexit_test.py  ext_vicost_test.py  get_data.sh  int_ep_test.py  int_go_test.py  int_rp_test.py  int_sp_test.py  internal_test.py  stecode  utils.py  vicost_test.py
tests/data/: null_2recAstxeaehly.txt  test1_2recAstxeae.txt  test1_2recAstxeaehly.txt  test1_eaesubtype.tab  test1_sfindAbricate.tab  test1_stecvir.tab  test1_targetstx.txt  test1_virbarcode.tab  test2_2recAstxeae.txt  test2_2recAstxeaehly.txt  test2_eaesubtype.tab  test2_sfindAbricate.tab  test2_stecvir.tab  test2_targetstx.txt  test2_virbarcode.tab
tests/debug/: null_2recAstxeaehly.txt  null_stecvir.tab
vicost/: __main__.py  arguments.py  assists.py  cmd_runners.py  gen_output.py  mini_vicost.py  vicost.py
vicost/database/: stx_eae_hly_recA.fasta  stx_eae_hly_recA.fasta.amb  stx_eae_hly_recA.fasta.ann  stx_eae_hly_recA.fasta.bwt  stx_eae_hly_recA.fasta.pac  stx_eae_hly_recA.fasta.sa  stx_recA_eae.fasta  stx_recA_eae.fasta.ann  stx_recA_eae.fasta.bwt  stx_recA_eae.fasta.sa
vicost/parsers/: eaesubtype_parse.py  recAstxeae_parse.py  stecvir_parse.py  (+1 more)
(+125 files in other folders)
