[tool.poetry]
name = "stecode"
version = "0.0.3"
description = "Virulence barcoding for STEC"
authors = ["Winkie Fong <Winkie.Fong@health.nsw.gov.au>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.13"
pandas = "^1.5.1"
numpy = "^1.23.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
stecode = "stecode.stecode:stecode"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
testpaths = [
    "tests"
]
pythonpath = ["."]
